running the job on the runner

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,21 +11,19 @@ jobs:
   test:
     environment: testing
     runs-on: ubuntu-latest
-    container: 
-      image: node:16
+#    container: 
+#      image: node:16
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb
-      # MONGODB_CONNECTION_PROTOCOL: mongodb+srv     # without service container
-      MONGODB_CLUSTER_ADDRESS: mongodb
-      # MONGODB_CLUSTER_ADDRESS: cluster0.ntrwp.mongodb.net     # without service container
-      # MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-      # MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
+      MONGODB_CLUSTER_ADDRESS: 127.0.0.1:27017      # when running the job directly on the runner instead of a container
       MONGODB_USERNAME: root
       MONGODB_PASSWORD: example
       PORT: 8080
     services:
       mongodb:
         image: mongo
+        ports:
+          - 27017:27017
         env:
           MONGO_INITDB_ROOT_USERNAME: root
           MONGO_INITDB_ROOT_PASSWORD: example
